# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG    = fixed a bug that was (or could have been) crashing
#
#

Jun 9, 2008
    [BUG] Fixed locking and reference count leaks in Numeric surfarray
       implementation.

May 31, 2008
    Updated sprite documentation - mainly for new stuff added in pygame 1.8.0

May 24, 2008
    New Color class for color management.

Apr 30, 2008
    updates to the sprite.py collision functions that update them to match 
        the modules coding style, include appropriate comments, and are 
        about 20% faster. It also includes a collide_circle_ratio function 
        for completeness, and perhaps most importantly, fixes a bug in 
        colide_mask which kept it from working correctly.  Also added unittests
        for the collision functions.  Thanks John Krukoff!

    [BUG] sound crackles on windows; restored chunk size 
        calculation to pre 1143

    Added \#!/usr/bin/env python to the top of examples that didn't have it.

Apr 13, 2008
    [BUG] Fixed pygame.surfarray.pixels3d() for 24bpp surfaces using numpy.
        Thanks Lorenz Quack!

Apr 12, 2008
    [BUG] Fixed png saving, and saving jpeg with capital letter extensions
        Thanks Nick Irvine!
        
Apr 11, 2008
    New PixelArray.compare() method to compare two PixelArrays.

Apr 8, 2008
    [BUG] Fixed pygame.draw.aaline() for cases in which only a single point
        has to be drawn.

Apr 4, 2008
    New PixelArray.replace() and PixelArray.extract() methods to quickly
      replace or extract a certain color.

Apr 3, 2008
    Added iter support to PixelArray.

Apr 2, 2008
    [BUG] Fixed mask settings for 8-bit surfaces created by
        surfarray.make_surface()
    [BUG] Fixed integer color value assignment bound checking in PixelArray.

Mar 30, 2008
    Added subscript support to PixelArray and PixelArray.make_surface()